--- a/views/problem.handlebars
+++ b/views/problem.handlebars
@@ -6,9 +6,7 @@
   <div id="main">
     <template x-if="ready">
       <div id="description">
-        <div x-data="problem = data.problem">
-          <p x-html="problem.content" style="white-space: pre-line;"></p>
-        </div>
+        {{{problem.content}}}
       </div>
     </template>
 
@@ -25,7 +23,7 @@
               <div>
                 <p>You submitted an answer for this problem already!</p>
                 <p
-                  x-text="await ajax(`/api/problem/${problem.id}/submissions/${getUserId()}/fastest`).then(res => res.ok ? res.json() : false) ? 'You have the fastest submission yet!': ''">
+                  x-text="await ajax(`/api/problem/{{problem.id}}/submissions/${getUserId()}/fastest`).then(res => res.ok ? res.json() : false) ? 'You have the fastest submission yet!': ''">
                 </p>
               </div>
             </template>
@@ -91,30 +89,20 @@
       editor.clearSelection();
     }
 
-    function getProblemId() {
-      const urlParams = new URLSearchParams(window.location.search);
-      return urlParams.get('problem');
-    }
-
     async function getProblem(data) {
-      const id = getProblemId();
       const userId = getUserId();
       if (!userId) alert('No user id found, please login first');
-      if (!id) alert('No problem id provided in URL');
 
-      const res = await ajax(`/api/problem/${id}`).then(res => res.json());
-      const subs = await ajax(`/api/problem/${id}/submissions/${userId}`).then(res => res.json());
-      data.problem = res.problem;
+      const subs = await ajax(`/api/problem/{{problem.id}}/submissions/${userId}`).then(res => res.json());
       data.submissions = subs.submissions;
     }
 
     async function submitProblem(submittedCodeResult) {
       submittedCodeResult.length = 0;
 
-      const id = getProblemId();
       const code = ace.edit("editor").getValue();
 
-      const response = await ajax(`/api/problem/${id}/submit`, {
+      const response = await ajax(`/api/problem/{{problem.id}}/submit`, {
         method: 'POST',
         body: JSON.stringify({ code })
       }).then(res => res.json());
@@ -128,7 +116,7 @@
     async function testCode(testCodeResults) {
       testCodeResults.length = 0;
       const code = ace.edit("editor").getValue();
-      const { testCases } = await ajax(`/api/problem/${getProblemId()}/test-cases`).then(res => res.json());
+      const { testCases } = await ajax('/api/problem/{{problem.id}}/test-cases').then(res => res.json());
 
       testCases.forEach(test => {
         console.debug(`Running test case with input: ${test.input}`);
