--- a/views/problem.handlebars
+++ b/views/problem.handlebars
@@ -74,19 +74,26 @@
     </aside>
 
   </div>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.43.3/ace.js" type="text/javascript"
-    charset="utf-8"></script>
+  <script src="https://www.unpkg.com/ace-builds@latest/src-noconflict/ace.js"></script>
+  <script src="https://www.unpkg.com/ace-builds@latest/src-noconflict/ext-language_tools.js"></script>
+  <script src="https://www.unpkg.com/ace-linters@latest/build/ace-linters.js"></script>
   <script>
     function loadEditor() {
-      var editor = ace.edit("editor");
+      ace.require("ace/ext/language_tools"); //To allow autocompletion
+      var editor = ace.edit("editor", {
+        enableBasicAutocompletion: true,
+        enableLiveAutocompletion: true,
+        mode: 'ace/mode/javascript'
+      });
       editor.setTheme("ace/theme/github_dark");
       editor.setOption("showGutter", false);
-      editor.session.setMode("ace/mode/javascript");
       editor.setValue(`function main(input) {
       // your code here
 }
 `)
       editor.clearSelection();
+      var provider = LanguageProvider.fromCdn("https://www.unpkg.com/ace-linters@latest/build/");
+      provider.registerEditor(editor);
     }
 
     async function getProblem(data) {
