--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,7 +13,7 @@
 <body>
  <div class="navbar" x-data="{}">
     <div class="breadcrumbs">
-        <span>Rage against christmas</span>
+        <a href="/">Rage against christmas</a>
     </div>
     <a href="/leaderboard">Leaderboard</a>
     <div class="login">
