--- a/views/leaderboard.handlebars
+++ b/views/leaderboard.handlebars
@@ -9,8 +9,9 @@
         }
     }
 </style>
-<div>
-
+<div style="display: grid;place-content: center;">
+    <h1 style="margin-block-end: 0">Top scorers this event</h1>
+    <p>Submissions end in 24 hours.</p>
     <table>
       <thead>
         <tr>
